force-app/main/default/objects/Media_Placement__c/Media_Placement__c.object-meta.xml
<CustomObject>
    <label>Media Placement</label>
    <nameField>
        <label>Media Placement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>