force-app/main/default/objects/Media_Placement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Media Placements</relationshipLabel>
    <relationshipName>Media_Placements</relationshipName>
    <type>Lookup</type>
</CustomField>