force-app/main/default/objects/Media_Placement__c/fields/ACH_Information_on_File__c.field-meta.xml
<CustomField>
    <fullName>ACH_Information_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH Information on File</label>
    <type>Checkbox</type>
</CustomField>