force-app/main/default/objects/Media_Placement__c/fields/Asset_Height__c.field-meta.xml
<CustomField>
    <fullName>Asset_Height__c</fullName>
    <label>Asset Height</label>
    <length>16</length>
    <type>Text</type>
</CustomField>