force-app/main/default/objects/Media_Placement__c/fields/Call_Requested_to_Confirm_Details_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Requested_to_Confirm_Details_Date__c</fullName>
    <label>Call Requested to Confirm Details Date</label>
    <type>Date</type>
</CustomField>