force-app/main/default/objects/Media_Placement__c/fields/Campus_Moment__c.field-meta.xml
<CustomField>
    <fullName>Campus_Moment__c</fullName>
    <label>Campus Moment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Back-to-school</fullName>
            </value>
            <value>
                <fullName>Move-In</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Pre-back-to-school</fullName>
            </value>
            <value>
                <fullName>Welcome Week</fullName>
            </value>
            <value>
                <fullName>R&amp;B Hosted Event Promotion</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Homecoming/Late Fall</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>