force-app/main/default/objects/Media_Placement__c/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Media_Placement_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loss of communication</fullName>
            </value>
            <value>
                <fullName>Placement fell through</fullName>
            </value>
            <value>
                <fullName>Placement type not priority</fullName>
            </value>
            <value>
                <fullName>School removed from program</fullName>
            </value>
            <value>
                <fullName>Unavailable within program dates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>