force-app/main/default/objects/Media_Placement__c/fields/ClosedLost_Date__c.field-meta.xml
<CustomField>
    <fullName>ClosedLost_Date__c</fullName>
    <label>Closed-Lost Date</label>
    <type>Date</type>
</CustomField>