force-app/main/default/objects/Media_Placement__c/fields/ClosedWon_Date__c.field-meta.xml
<CustomField>
    <fullName>ClosedWon_Date__c</fullName>
    <label>Closed-Won Date</label>
    <type>Date</type>
</CustomField>