force-app/main/default/objects/Media_Placement__c/fields/Cold_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Cold_Call_Date__c</fullName>
    <label>Cold Call Date</label>
    <type>Date</type>
</CustomField>