force-app/main/default/objects/Media_Placement__c/fields/Confirm_Placement_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Placement_Availability_Date__c</fullName>
    <label>Confirm Placement Availability Date</label>
    <type>Date</type>
</CustomField>