force-app/main/default/objects/Media_Placement__c/fields/Contract_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Complete_Date__c</fullName>
    <label>Contract Complete Date</label>
    <type>Date</type>
</CustomField>