force-app/main/default/objects/Media_Placement__c/fields/Contract_Not_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Not_Started_Date__c</fullName>
    <label>Contract Not Started Date</label>
    <type>Date</type>
</CustomField>