force-app/main/default/objects/Media_Placement__c/fields/Contract_Pending_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pending_Date__c</fullName>
    <label>Contract Pending Date</label>
    <type>Date</type>
</CustomField>