force-app/main/default/objects/Media_Placement__c/fields/Creative_Status__c.field-meta.xml
<CustomField>
    <fullName>Creative_Status__c</fullName>
    <label>Creative Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Requested from Client</fullName>
            </value>
            <value>
                <fullName>Requested from Designer</fullName>
            </value>
            <value>
                <fullName>Pending Client Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>