force-app/main/default/objects/Media_Placement__c/fields/Date_Invoice_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Received__c</fullName>
    <label>Date Invoice Received</label>
    <type>Date</type>
</CustomField>