force-app/main/default/objects/Media_Placement__c/fields/Date_Submitted_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_for_Payment__c</fullName>
    <label>Date Submitted for Payment</label>
    <type>Date</type>
</CustomField>