force-app/main/default/objects/Media_Placement__c/fields/Finalizing_Media_Placement_Details_Date__c.field-meta.xml
<CustomField>
    <fullName>Finalizing_Media_Placement_Details_Date__c</fullName>
    <label>Finalizing Media Placement Details Date</label>
    <type>Date</type>
</CustomField>