force-app/main/default/objects/Media_Placement__c/fields/Initial_Reachout_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reachout_Date__c</fullName>
    <label>Initial Reachout Date</label>
    <type>Date</type>
</CustomField>