force-app/main/default/objects/Media_Placement__c/fields/Lead_Campus_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Campus_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Campus Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Media Placements (Lead Campus Contact)</relationshipLabel>
    <relationshipName>Media_Placements_Lead_Campus_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>