force-app/main/default/objects/Media_Placement__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <referenceTo>Media__c</referenceTo>
    <relationshipLabel>Media Placements</relationshipLabel>
    <relationshipName>Media_Placements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>