force-app/main/default/objects/Media_Placement__c/fields/Media_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Media_Contact_Email__c</fullName>
    <description>Used for Actions to pre-set To field in emails</description>
    <formula>Media__r.Lead_Campus_Contact__r.Email</formula>
    <label>Media Contact Email</label>
    <type>Text</type>
</CustomField>