force-app/main/default/objects/Media_Placement__c/fields/Media_Detail__c.field-meta.xml
<CustomField>
    <fullName>Media_Detail__c</fullName>
    <label>Media Detail</label>
    <type>TextArea</type>
</CustomField>