force-app/main/default/objects/Media_Placement__c/fields/Media_Location__c.field-meta.xml
<CustomField>
    <fullName>Media_Location__c</fullName>
    <formula>TEXT(Media__r.Media_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Media Location</label>
    <type>Text</type>
</CustomField>