force-app/main/default/objects/Media_Placement__c/fields/Media_Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Media_Placement_Status__c</fullName>
    <label>Media Placement Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Email Sent</fullName>
            </value>
            <value>
                <fullName>Secondary Email Sent</fullName>
            </value>
            <value>
                <fullName>Third Email Sent</fullName>
            </value>
            <value>
                <fullName>Cold Call to Dept</fullName>
            </value>
            <value>
                <fullName>Requested media kit / information</fullName>
                <label>Requested Media Kit / Information</label>
            </value>
            <value>
                <fullName>Confirm placement availability</fullName>
                <label>Confirm Placement Availability</label>
            </value>
            <value>
                <fullName>Call Requested to Confirm Details</fullName>
            </value>
            <value>
                <fullName>Finalizing Media Placement Details</fullName>
            </value>
            <value>
                <fullName>Contract Not Started</fullName>
            </value>
            <value>
                <fullName>Contract Pending</fullName>
            </value>
            <value>
                <fullName>Contract Complete</fullName>
            </value>
            <value>
                <fullName>Proof of Placement Requested</fullName>
            </value>
            <value>
                <fullName>Proof of Placement Received</fullName>
            </value>
            <value>
                <fullName>Proof of Placement Waved</fullName>
            </value>
            <value>
                <fullName>Closed-Won</fullName>
            </value>
            <value>
                <fullName>Closed-Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>