force-app/main/default/objects/Media_Placement__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <formula>TEXT( Media__r.Media_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Media Type</label>
    <type>Text</type>
</CustomField>