force-app/main/default/objects/Media_Placement__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>First Invoice Request Sent</fullName>
            </value>
            <value>
                <fullName>Second Invoice Request Sent</fullName>
            </value>
            <value>
                <fullName>Third Invoice Request Sent</fullName>
            </value>
            <value>
                <fullName>Invoice Received</fullName>
            </value>
            <value>
                <fullName>Invoice Submitted</fullName>
            </value>
            <value>
                <fullName>Payment Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>