force-app/main/default/objects/Media_Placement__c/fields/Proof_of_Placement_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Placement_Received_Date__c</fullName>
    <label>Proof of Placement Received Date</label>
    <type>Date</type>
</CustomField>