force-app/main/default/objects/Media_Placement__c/fields/R_B_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>R_B_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>R&amp;B Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Media_Placements</relationshipName>
    <type>Lookup</type>
</CustomField>