force-app/main/default/objects/Media_Placement__c/fields/R_B_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>R_B_Coordinator_Email__c</fullName>
    <formula>R_B_Coordinator__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R&amp;B Coordinator Email</label>
    <type>Text</type>
</CustomField>