force-app/main/default/objects/Media_Placement__c/fields/R_B_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>R_B_Coordinator_Name__c</fullName>
    <formula>R_B_Coordinator__r.FirstName &amp;&apos; - &apos;&amp;  R_B_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R&amp;B Coordinator Name</label>
    <type>Text</type>
</CustomField>