force-app/main/default/objects/Media_Placement__c/fields/Requested_Media_Kit_Information_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Media_Kit_Information_Date__c</fullName>
    <label>Requested Media Kit / Information Date</label>
    <type>Date</type>
</CustomField>