force-app/main/default/objects/Media_Placement__c/fields/Second_Reachout_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Reachout_Date__c</fullName>
    <label>Second Reachout Date</label>
    <type>Date</type>
</CustomField>