force-app/main/default/objects/Media_Placement__c/fields/Third_Reachout_Date__c.field-meta.xml
<CustomField>
    <fullName>Third_Reachout_Date__c</fullName>
    <label>Third Reachout Date</label>
    <type>Date</type>
</CustomField>