force-app/main/default/objects/Media_Placement__c/fields/W9_W8_Form_on_File__c.field-meta.xml
<CustomField>
    <fullName>W9_W8_Form_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W9/W8 Form on File</label>
    <type>Checkbox</type>
</CustomField>